# gnostr-templates

./: .gitignore  Cargo.toml  GNUmakefile  cargo-generate.toml  justfile  rustup-show.txt
cli-generated/: .envrc  Cargo.toml  README.md
cli-generated/.github/workflows/: cd.yml
cli-generated/lib/: Cargo.toml
cli-generated/lib/src/: guess.rs  install.rs  lifetimes.rs  option.rs  slice.rs  testing.rs
cli-generated/lib/src/smart_pointers/: mod.rs
cli-generated/lib/src/subdir/: mod.rs
cli-generated/lib/tests/: integration_test.rs
cli-generated/src/: cli.rs  config.rs  main.rs
cli-template/template/: .Cargo.toml.swp
cli-template/template/lib/src/: expressions.rs  fibonacci.rs  json.rs  lib.rs  loops.rs  ownership.rs  rest.rs  structs_rectangle.rs  traits.rs  variables.rs
cli-template/template/lib/src/concurrency/: mod.rs  thread2.rs  threads.rs
cli-template/template/lib/src/either/: either_usage.rs
cli-template/template/lib/src/making_lists/: ring_buffer.rs
cli-template/template/lib/src/smart_pointers/: pointers.rs  tree.rs
cli-template/template/lib/src/subdir/: another_file.rs
cli-template/template/src/: cli.rs
cli/template/: Cargo.toml
cli/template/lib/src/: collections.rs  lib.rs  notification.rs
cli/template/lib/src/either/: mod.rs
cli/template/lib/src/smart_pointers/: refcell.rs
cli/template/src/: cli.rs  main.rs
component-generated/: Cargo.toml  LICENSE
dumbpipe-generated/: Cargo.toml  README.md
dumbpipe-generated/src/: app.rs  main.rs
dumbpipe-template/template/: Cargo.toml
dumbpipe-template/template/src/: main.rs
dumbpipe/template/src/: app.rs  lib.rs  main.rs
dumbpipe_generated/: Cargo.toml  README.md
dumbpipe_generated/src/: main.rs
gnostr-component-generated/: .envrc  Cargo.toml  README.md
gnostr-component-generated/.github/workflows/: cd.yml
gnostr-component/template/: Cargo.toml
lib-generated/: .envrc  Cargo.toml  README.md
lib-generated/.github/workflows/: cd.yml
lib-term-template/template/: .Cargo.toml.swp  Cargo.toml
lib-term-template/template/src/: lib.rs  shell_connection.rs
lib/template/src/components/: home.rs
nostui-template/template/: Cargo.toml
nostui-template/template/src/components/: home.rs  status_bar.rs
simple-async-generated/: Cargo.toml
simple-async/template/: Cargo.toml
simple-generated/: Cargo.toml  LICENSE  README.md
simple-template/template/: .Cargo.toml.swp
term-template/template/src/: client.rs  server.rs
user-input-generated/: Cargo.toml  README.md
user-input-template/template/: Cargo.toml
user-input-template/template/src/: app.rs
user-input/template/src/: app.rs  main.rs
wasm-pack-generated/: Cargo.toml  LICENSE_MIT
wasm-pack-generated/src/: lib.rs
