[package]
name = "simple-async-generated"
version = "0.1.0"
authors = ["randymcmillan <randymcmillan@protonmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
color-eyre = "0.6.3"
tokio = { version = "1.40.0", features = ["full"] }
