[package]
name = "{{project-name | kebab_case}}"
version = "0.1.0"
authors = ["{{authors}}"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
anyhow = "1.0.75"
clap = { version = "4.4.10", features = ["derive"] }
hex = "0.4.3"
iroh-net = "0.27"
quinn = { version = "0.11.3", package = "iroh-quinn" }
tokio = { version = "1.34.0", features = ["full"] }
tokio-util = "0.7.10"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
duct = "0.13.6"
nix = { version = "0.29", features = ["signal", "process"] }
rand = "0.8.5"

[patch.crates-io]
iroh-net = { git = "https://github.com/n0-computer/iroh.git", branch = "main"}
