[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
license = "MIT"
edition = "2015"

[[bin]]
name = "term-chat"
path = "./src/bin/main.rs"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
chan = "0.1"
rand = "0.5"

serde = "1.0"

serde_derive = "1.0"

serde_json = "1.0"

termion = "1.5"
chrono = "0.4"

tui = "0.2"
